# ml-salary-model

./: .env  .gitignore  pyproject.toml
data/: raw_data.xlsx
src/eda/: eda.ipynb
src/models/: model.py  train_test.ipynb
src/scripts/: app.py  eda.ipynb
