[tool.poetry]
name = "salary-model"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "salary_model", from = "src"}]

[tool.poetry.dependencies]
python = "^3.13"
pandas = "^2.3.2"
scikit-learn = "^1.7.1"
statsmodels = "^0.14.5"
seaborn = "^0.13.2"
matplotlib = "^3.10.5"
openpyxl = "^3.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
