[tool.poetry]
name = "salary-model"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "salary_model", from = "src"}]

[tool.poetry.dependencies]
python = "^3.13"
pandas = "^2.3.2"
scikit-learn = "^1.7.1"
statsmodels = "^0.14.5"
seaborn = "^0.13.2"
matplotlib = "^3.10.5"
openpyxl = "^3.1.5"
streamlit = "^1.49.1"
mlflow = "^3.3.2"
dotenv = "^0.9.9"

[tool.poetry.scripts]
run-mlflow = "sh -c 'mlflow server --backend-store-uri sqlite:///mlflow.db --default-artifact-root ./mlruns --host 127.0.0.1 --port 5000'"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
